--- a/style.css
+++ b/style.css
@@ -163,6 +163,22 @@ p {
 
 select option{
  background:  rgba(12, 40, 73, 0.733);
+ width: 100%;
+ padding: 0.5rem;
+ position: relative;
+ box-sizing: border-box;
+ list-style: none;
+ cursor: pointer;
+}
+ 
+select option:hover,
+select option:focus{
+  width: 100%;
+  padding: 0.5rem;
+  position: relative;
+  box-sizing: border-box;
+  border: 0.25PX SOLID #FDB71F;
+  border-radius: 4px;
 }
 
 .container .mb-3 select {
