--- a/style.css
+++ b/style.css
@@ -164,16 +164,16 @@ p {
 select option{
  background:  rgba(12, 40, 73, 0.733);
  width: 100%;
- padding: 1rem;
+ padding: 3rem;
  position: relative;
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
 }
- 
-select option:hover{
+
+option:hover{
   width: 100%;
-  padding: 1rem;
+  padding: 3rem;
   position: relative;
   box-sizing: border-box;
   border: 0.25PX SOLID #FDB71F;
