--- a/style.css
+++ b/style.css
@@ -162,18 +162,31 @@ p {
 }
 
 select option{
- background:  rgba(12, 40, 73, 0.733);
+ background:  rgba(12, 40, 73, 0.433);
  width: 100%;
- padding: 3rem;
+ padding: 10rem;
  position: relative;
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
 }
 
+select.decorated option:hover{
+  box-shadow: 0 0 10px 100px  rgba(0, 0, 0, 0.158) inset;
+}
+
+select option:hover{
+  width: 100%;
+  padding: 10rem;
+  position: relative;
+  box-sizing: border-box;
+  border: 0.25PX SOLID #FDB71F;
+  border-radius: 4px;
+}
+
 option:hover{
   width: 100%;
-  padding: 3rem;
+  padding: 10rem;
   position: relative;
   box-sizing: border-box;
   border: 0.25PX SOLID #FDB71F;
