--- a/style.css
+++ b/style.css
@@ -162,10 +162,10 @@ p {
 }
 
 select ul li.option{
-  backgroun-color: rgba(12, 40, 73, 0.433);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
-  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
+  backgroun-color: rgba(12, 40, 73, 0.733);
+  box-shadow: 0px 1px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
+  -webkit-box-shadow: 0px 1px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
+  -moz-box-shadow: 0px 1px rgba(0, 0, 0, 0.158), 0px -1px 0 rgba(0, 0, 0, 0.158);
 }
 
 select ul li.option:hover{
